--- a/MyDirectXLib/Project1/Project1.vcxproj
+++ b/MyDirectXLib/Project1/Project1.vcxproj
@@ -158,10 +158,12 @@
     </FxCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="Source\Component\Graphics\MeshRenderer.cpp" />
     <ClCompile Include="Source\Component\Physics\AbstractCollider2D.cpp" />
     <ClCompile Include="Source\Component\Physics\CircleCollider2D.cpp" />
     <ClCompile Include="Source\Component\Physics\BoxCollder2D.cpp" />
     <ClCompile Include="Source\Component\Graphics\SpriteRenderer.cpp" />
+    <ClCompile Include="Source\Device\Base\MeshVertex.cpp" />
     <ClCompile Include="Source\Device\Buffer\ConstantBuffer.cpp" />
     <ClCompile Include="Source\Device\Buffer\IndexBuffer.cpp" />
     <ClCompile Include="Source\Device\Buffer\VertexBuffer.cpp" />
@@ -169,6 +171,8 @@
     <ClCompile Include="Source\Device\GameDevice.cpp" />
     <ClCompile Include="Source\Device\GameTime.cpp" />
     <ClCompile Include="Source\Device\Renderer.cpp" />
+    <ClCompile Include="Source\Device\Resource\Mesh.cpp" />
+    <ClCompile Include="Source\Device\Resource\MeshManager.cpp" />
     <ClCompile Include="Source\Math\RectF.cpp" />
     <ClCompile Include="Source\Physics\CollisionHit2D.cpp" />
     <ClCompile Include="Source\Physics\PhysicsCalc.cpp" />
@@ -176,8 +180,8 @@
     <ClCompile Include="Source\Scene\SceneManager.cpp" />
     <ClCompile Include="Source\Component\AbstractComponent.cpp" />
     <ClCompile Include="Source\Component\ComponentManager.cpp" />
-    <ClCompile Include="Source\Device\Base\Shader\PixelShader.cpp" />
-    <ClCompile Include="Source\Device\Base\Shader\VertexShader.cpp" />
+    <ClCompile Include="Source\Device\Resource\Shader\PixelShader.cpp" />
+    <ClCompile Include="Source\Device\Resource\Shader\VertexShader.cpp" />
     <ClCompile Include="Source\Math\MathUtility.cpp" />
     <ClCompile Include="Source\Actor\GameObject.cpp" />
     <ClCompile Include="Source\Actor\GameObjectManager.cpp" />
@@ -186,15 +190,16 @@
     <ClCompile Include="Source\Device\CameraEffect\CameraEffectManager.cpp" />
     <ClCompile Include="Source\Device\CameraEffect\CameraShake.cpp" />
     <ClCompile Include="Source\Device\Camera.cpp" />
-    <ClCompile Include="Source\Device\SoundInstance.cpp" />
-    <ClCompile Include="Source\Device\SoundManager.cpp" />
+    <ClCompile Include="Source\Device\Resource\SoundInstance.cpp" />
+    <ClCompile Include="Source\Device\Resource\SoundManager.cpp" />
     <ClCompile Include="Source\Device\DirectXManager.cpp" />
     <ClCompile Include="Source\Scene\AbstractScene.cpp" />
     <ClCompile Include="Source\Game.cpp" />
     <ClCompile Include="Source\Device\Input.cpp" />
     <ClCompile Include="Main.cpp" />
-    <ClCompile Include="Source\Device\ShaderManager.cpp" />
-    <ClCompile Include="Source\Device\TextureManager.cpp" />
+    <ClCompile Include="Source\Device\Resource\Shader\ShaderManager.cpp" />
+    <ClCompile Include="Source\Device\Resource\TextureManager.cpp" />
+    <ClCompile Include="Source\Scene\TestScene.cpp" />
     <ClCompile Include="Source\Utility\Color.cpp" />
     <ClCompile Include="Source\Utility\State\StateManager.cpp" />
     <ClCompile Include="Source\Utility\StringUtility.cpp" />
@@ -206,11 +211,12 @@
   <ItemGroup>
     <ClInclude Include="Source\Actor\IGameMediator.h" />
     <ClInclude Include="Source\Actor\Test\TestObject.h" />
+    <ClInclude Include="Source\Component\Graphics\MeshRenderer.h" />
     <ClInclude Include="Source\Component\Physics\AbstractCollider2D.h" />
     <ClInclude Include="Source\Component\Physics\CircleCollider2D.h" />
     <ClInclude Include="Source\Component\Physics\BoxCollider2D.h" />
     <ClInclude Include="Source\Component\Graphics\SpriteRenderer.h" />
-    <ClInclude Include="Source\Device\Base\ModelVertex.h" />
+    <ClInclude Include="Source\Device\Base\MeshVertex.h" />
     <ClInclude Include="Source\Device\Buffer\ConstantBuffer.h" />
     <ClInclude Include="Source\Device\Buffer\IndexBuffer.h" />
     <ClInclude Include="Source\Device\Buffer\SpriteConstantBuffer.h" />
@@ -221,6 +227,8 @@
     <ClInclude Include="Source\Device\GameTime.h" />
     <ClInclude Include="Source\Device\IRenderable2D.h" />
     <ClInclude Include="Source\Device\Renderer.h" />
+    <ClInclude Include="Source\Device\Resource\Mesh.h" />
+    <ClInclude Include="Source\Device\Resource\MeshManager.h" />
     <ClInclude Include="Source\Math\RectF.h" />
     <ClInclude Include="Source\Physics\CollisionHit2D.h" />
     <ClInclude Include="Source\Physics\PhysicsCalc.h" />
@@ -229,8 +237,8 @@
     <ClInclude Include="Source\Scene\SceneManager.h" />
     <ClInclude Include="Source\Component\AbstractComponent.h" />
     <ClInclude Include="Source\Component\ComponentManager.h" />
-    <ClInclude Include="Source\Device\Base\Shader\PixelShader.h" />
-    <ClInclude Include="Source\Device\Base\Shader\VertexShader.h" />
+    <ClInclude Include="Source\Device\Resource\Shader\PixelShader.h" />
+    <ClInclude Include="Source\Device\Resource\Shader\VertexShader.h" />
     <ClInclude Include="Source\Math\MathUtility.h" />
     <ClInclude Include="Source\Actor\GameObject.h" />
     <ClInclude Include="Source\Actor\GameObjectManager.h" />
@@ -240,15 +248,16 @@
     <ClInclude Include="Source\Device\CameraEffect\CameraShake.h" />
     <ClInclude Include="Source\Device\CameraEffect\ICameraEffect.h" />
     <ClInclude Include="Source\Device\Camera.h" />
-    <ClInclude Include="Source\Device\SoundInstance.h" />
-    <ClInclude Include="Source\Device\SoundManager.h" />
+    <ClInclude Include="Source\Device\Resource\SoundInstance.h" />
+    <ClInclude Include="Source\Device\Resource\SoundManager.h" />
     <ClInclude Include="Source\Device\DirectXManager.h" />
     <ClInclude Include="Source\Scene\AbstractScene.h" />
     <ClInclude Include="Source\Game.h" />
     <ClInclude Include="Source\Device\Input.h" />
     <ClInclude Include="Source\Def\Screen.h" />
-    <ClInclude Include="Source\Device\ShaderManager.h" />
-    <ClInclude Include="Source\Device\TextureManager.h" />
+    <ClInclude Include="Source\Device\Resource\Shader\ShaderManager.h" />
+    <ClInclude Include="Source\Device\Resource\TextureManager.h" />
+    <ClInclude Include="Source\Scene\TestScene.h" />
     <ClInclude Include="Source\Utility\Color.h" />
     <ClInclude Include="Source\Utility\State\StateManager.h" />
     <ClInclude Include="Source\Utility\State\IState.h" />
