--- a/MyDirectXLib/Project1/Project1.vcxproj.filters
+++ b/MyDirectXLib/Project1/Project1.vcxproj.filters
@@ -55,6 +55,7 @@
     <ClCompile Include="Source\Physics\CollisionHit3D.cpp" />
     <ClCompile Include="Source\Component\Physics\AbstractCollider3D.cpp" />
     <ClCompile Include="Source\Actor\Test\Tester.cpp" />
+    <ClCompile Include="Source\Physics\Box3D.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Scene\AbstractScene.h" />
@@ -123,6 +124,8 @@
     <ClInclude Include="Source\Component\Physics\AbstractCollider3D.h" />
     <ClInclude Include="Source\Actor\Test\Tester.h" />
     <ClInclude Include="Source\Component\Physics\SphereCollider3D.h" />
+    <ClInclude Include="Source\Physics\Box3D.h" />
+    <ClInclude Include="Source\Component\Physics\BoxCollider3D.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\SpritePS.hlsl" />
