--- a/MyDirectXLib/Project1/Project1.vcxproj.filters
+++ b/MyDirectXLib/Project1/Project1.vcxproj.filters
@@ -56,6 +56,7 @@
     <ClCompile Include="Source\Component\Physics\AbstractCollider3D.cpp" />
     <ClCompile Include="Source\Actor\Test\Tester.cpp" />
     <ClCompile Include="Source\Physics\Box3D.cpp" />
+    <ClCompile Include="Source\Component\Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Scene\AbstractScene.h" />
@@ -126,6 +127,7 @@
     <ClInclude Include="Source\Component\Physics\SphereCollider3D.h" />
     <ClInclude Include="Source\Physics\Box3D.h" />
     <ClInclude Include="Source\Component\Physics\BoxCollider3D.h" />
+    <ClInclude Include="Source\Component\Transform.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\SpritePS.hlsl" />
