Actionを移植(テストしてない)

--- a/MyDirectXLib/Project1/Project1.vcxproj
+++ b/MyDirectXLib/Project1/Project1.vcxproj
@@ -209,6 +209,15 @@
     <ClCompile Include="Source\Device\Resource\Shader\ShaderManager.cpp" />
     <ClCompile Include="Source\Device\Resource\TextureManager.cpp" />
     <ClCompile Include="Source\Scene\TestScene.cpp" />
+    <ClCompile Include="Source\Utility\Action\ActionManager.cpp" />
+    <ClCompile Include="Source\Utility\Action\MoveBy.cpp" />
+    <ClCompile Include="Source\Utility\Action\MoveTo.cpp" />
+    <ClCompile Include="Source\Utility\Action\Repeat.cpp" />
+    <ClCompile Include="Source\Utility\Action\RepeatForever.cpp" />
+    <ClCompile Include="Source\Utility\Action\RepeatTime.cpp" />
+    <ClCompile Include="Source\Utility\Action\Sequence.cpp" />
+    <ClCompile Include="Source\Utility\Action\Spawn.cpp" />
+    <ClCompile Include="Source\Utility\Action\WaitForSeconds.cpp" />
     <ClCompile Include="Source\Utility\Color.cpp" />
     <ClCompile Include="Source\Utility\State\StateManager.cpp" />
     <ClCompile Include="Source\Utility\StringUtility.cpp" />
@@ -282,6 +291,17 @@
     <ClInclude Include="Source\Device\Resource\Shader\ShaderManager.h" />
     <ClInclude Include="Source\Device\Resource\TextureManager.h" />
     <ClInclude Include="Source\Scene\TestScene.h" />
+    <ClInclude Include="Source\Utility\Action\AbstractAction.h" />
+    <ClInclude Include="Source\Utility\Action\ActionManager.h" />
+    <ClInclude Include="Source\Utility\Action\Actions.h" />
+    <ClInclude Include="Source\Utility\Action\MoveBy.h" />
+    <ClInclude Include="Source\Utility\Action\MoveTo.h" />
+    <ClInclude Include="Source\Utility\Action\Repeat.h" />
+    <ClInclude Include="Source\Utility\Action\RepeatForever.h" />
+    <ClInclude Include="Source\Utility\Action\RepeatTime.h" />
+    <ClInclude Include="Source\Utility\Action\Sequence.h" />
+    <ClInclude Include="Source\Utility\Action\Spawn.h" />
+    <ClInclude Include="Source\Utility\Action\WaitForSeconds.h" />
     <ClInclude Include="Source\Utility\Color.h" />
     <ClInclude Include="Source\Utility\State\StateManager.h" />
     <ClInclude Include="Source\Utility\State\IState.h" />
