--- a/MyDirectXLib/Project1/Project1.vcxproj.filters
+++ b/MyDirectXLib/Project1/Project1.vcxproj.filters
@@ -59,6 +59,15 @@
     <ClCompile Include="Source\Device\Resource\AudioInstance.cpp" />
     <ClCompile Include="Source\Device\Resource\AudioManager.cpp" />
     <ClCompile Include="Source\Component\Audio\AudioSource.cpp" />
+    <ClCompile Include="Source\Utility\Action\ActionManager.cpp" />
+    <ClCompile Include="Source\Utility\Action\MoveBy.cpp" />
+    <ClCompile Include="Source\Utility\Action\MoveTo.cpp" />
+    <ClCompile Include="Source\Utility\Action\Repeat.cpp" />
+    <ClCompile Include="Source\Utility\Action\RepeatForever.cpp" />
+    <ClCompile Include="Source\Utility\Action\RepeatTime.cpp" />
+    <ClCompile Include="Source\Utility\Action\Sequence.cpp" />
+    <ClCompile Include="Source\Utility\Action\Spawn.cpp" />
+    <ClCompile Include="Source\Utility\Action\WaitForSeconds.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Scene\AbstractScene.h" />
@@ -133,6 +142,17 @@
     <ClInclude Include="Source\Device\Resource\AudioData.h" />
     <ClInclude Include="Source\Device\Resource\AudioInstance.h" />
     <ClInclude Include="Source\Component\Audio\AudioSource.h" />
+    <ClInclude Include="Source\Utility\Action\AbstractAction.h" />
+    <ClInclude Include="Source\Utility\Action\ActionManager.h" />
+    <ClInclude Include="Source\Utility\Action\Actions.h" />
+    <ClInclude Include="Source\Utility\Action\MoveBy.h" />
+    <ClInclude Include="Source\Utility\Action\MoveTo.h" />
+    <ClInclude Include="Source\Utility\Action\Repeat.h" />
+    <ClInclude Include="Source\Utility\Action\RepeatForever.h" />
+    <ClInclude Include="Source\Utility\Action\RepeatTime.h" />
+    <ClInclude Include="Source\Utility\Action\Sequence.h" />
+    <ClInclude Include="Source\Utility\Action\Spawn.h" />
+    <ClInclude Include="Source\Utility\Action\WaitForSeconds.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\SpritePS.hlsl" />
