--- a/MyDirectXLib/Project1/Project1.vcxproj.filters
+++ b/MyDirectXLib/Project1/Project1.vcxproj.filters
@@ -59,7 +59,6 @@
     <ClCompile Include="Source\Device\Resource\AudioInstance.cpp" />
     <ClCompile Include="Source\Device\Resource\AudioManager.cpp" />
     <ClCompile Include="Source\Component\Audio\AudioSource.cpp" />
-    <ClCompile Include="Source\Utility\Action\ActionManager.cpp" />
     <ClCompile Include="Source\Utility\Action\MoveBy.cpp" />
     <ClCompile Include="Source\Utility\Action\MoveTo.cpp" />
     <ClCompile Include="Source\Utility\Action\Repeat.cpp" />
@@ -69,6 +68,7 @@
     <ClCompile Include="Source\Utility\Action\Spawn.cpp" />
     <ClCompile Include="Source\Utility\Action\WaitForSeconds.cpp" />
     <ClCompile Include="Source\Utility\Action\AbstractAction.cpp" />
+    <ClCompile Include="Source\Component\ActionManager.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Scene\AbstractScene.h" />
@@ -144,7 +144,6 @@
     <ClInclude Include="Source\Device\Resource\AudioInstance.h" />
     <ClInclude Include="Source\Component\Audio\AudioSource.h" />
     <ClInclude Include="Source\Utility\Action\AbstractAction.h" />
-    <ClInclude Include="Source\Utility\Action\ActionManager.h" />
     <ClInclude Include="Source\Utility\Action\Actions.h" />
     <ClInclude Include="Source\Utility\Action\MoveBy.h" />
     <ClInclude Include="Source\Utility\Action\MoveTo.h" />
@@ -155,6 +154,7 @@
     <ClInclude Include="Source\Utility\Action\Spawn.h" />
     <ClInclude Include="Source\Utility\Action\WaitForSeconds.h" />
     <ClInclude Include="Source\Utility\Action\EasingActions.h" />
+    <ClInclude Include="Source\Component\ActionManager.h" />
   </ItemGroup>
   <ItemGroup>
     <FxCompile Include="Assets\Shaders\SpritePS.hlsl" />
