--- a/MyDirectXLib/Project1/Project1.vcxproj
+++ b/MyDirectXLib/Project1/Project1.vcxproj
@@ -161,6 +161,7 @@
     <ClCompile Include="Source\Actor\Test\Tester.cpp" />
     <ClCompile Include="Source\Component\Audio\AudioSource.cpp" />
     <ClCompile Include="Source\Component\Graphics\MeshRenderer.cpp" />
+    <ClCompile Include="Source\Component\Graphics\TextRenderer.cpp" />
     <ClCompile Include="Source\Component\Physics\AbstractCollider2D.cpp" />
     <ClCompile Include="Source\Component\Physics\CircleCollider2D.cpp" />
     <ClCompile Include="Source\Component\Physics\BoxCollder2D.cpp" />
@@ -178,6 +179,7 @@
     <ClCompile Include="Source\Device\Resource\AudioData.cpp" />
     <ClCompile Include="Source\Device\Resource\AudioInstance.cpp" />
     <ClCompile Include="Source\Device\Resource\AudioManager.cpp" />
+    <ClCompile Include="Source\Device\Resource\FontManager.cpp" />
     <ClCompile Include="Source\Device\Resource\Mesh.cpp" />
     <ClCompile Include="Source\Device\Resource\MeshManager.cpp" />
     <ClCompile Include="Source\Math\Easing.cpp" />
@@ -234,6 +236,7 @@
     <ClInclude Include="Source\Actor\Test\TestObject.h" />
     <ClInclude Include="Source\Component\Audio\AudioSource.h" />
     <ClInclude Include="Source\Component\Graphics\MeshRenderer.h" />
+    <ClInclude Include="Source\Component\Graphics\TextRenderer.h" />
     <ClInclude Include="Source\Component\Physics\AbstractCollider2D.h" />
     <ClInclude Include="Source\Component\Physics\BoxCollider3D.h" />
     <ClInclude Include="Source\Component\Physics\CircleCollider2D.h" />
@@ -256,6 +259,8 @@
     <ClInclude Include="Source\Device\Resource\AudioData.h" />
     <ClInclude Include="Source\Device\Resource\AudioInstance.h" />
     <ClInclude Include="Source\Device\Resource\AudioManager.h" />
+    <ClInclude Include="Source\Device\Resource\FontManager.h" />
+    <ClInclude Include="Source\Device\Resource\FontOption.h" />
     <ClInclude Include="Source\Device\Resource\Mesh.h" />
     <ClInclude Include="Source\Device\Resource\MeshManager.h" />
     <ClInclude Include="Source\Math\Easing.h" />
